--- a/vday.html
+++ b/vday.html
@@ -2,14 +2,14 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Valentines Day 2024</title>
+        <title>Valentines Day 2025</title>
     </head>
     <body>
     <div class="valentines_card">
         <div class="front_card">
             <img src="baloon_heart.jpg" class="front_img">
             <div class="front_text">
-            <h3>Sending you a special delivery of love mail...</h3>
+            <h3>Uma simples mensagem para a dona dos meus mais bonitos sorrisos...</h3>
             </div>    
         </div>
         <div class="inside_card">
@@ -20,8 +20,8 @@
                   </audio>  
             </div>
             <div class="inside_text">
-                <h4>...straight from my heart of someone who adores you more than words can say.</h4>
-                <h3>Wishing you a Valentine's Day filled with all the joy and warmth you bring into my life!</h3>
+                <h4>Queria te lembrar do quão você é incrível e especial. Dona dos meus sorrisos mais sinceros.</h4>
+                <h3>Feliz dia de São Valetim, repleto de carinho, felicidade e da mesma doçura que você me traz!</h3>
             </div>
         </div>
     </div>
